--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,6 +73,18 @@ p {
   width: 90%;
 }
 
+@media only screen and (min-width: 491px) {
+  .red-container {
+    height: 335px;
+  }
+}
+
+@media only screen and (max-width: 491px) {
+  .red-container {
+    height: 400px;
+  }
+}
+
 @media only screen and (max-width: 593px) {
   .main-text {
     top: 50px;
@@ -90,7 +102,7 @@ p {
     display: flex;
   }
   .about-text {
-    width: 25%;
+    width: 27%;
   }
 }
 
