--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,6 @@ body {
 }
 
 h1 {
-  color: white;
   font-size: 50px;
   font-family: nilland-bold, sans-serif;
 }
@@ -28,27 +27,35 @@ a {
 }
 
 h2 {
-  color: white;
   font-size: 40px;
   font-family: nilland-bold, sans-serif;
 }
 
 h3 {
-  color: white;
   font-family: 'Helvetica Neue', sans-serif;
 }
 
 p {
-  color: white;
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 20px;
 }
 
+li {
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 20px;
+}
+
+ul {
+  list-style-type: none;
+}
+
 .navbar-very-dark {
+  color: white;
   background-color: rgb(20, 20, 20);
 }
 
 .bg-image {
+  color: white;
   background-image: url("../public/servers.jpg");
   background-size: cover;
   height: 500px;
@@ -61,10 +68,11 @@ p {
   height: 100%;
   width: 100%;
   background: rgb(0,0,0);
-  background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,0.5) 47%, rgba(30,30,30,1) 100%);
+  background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,0.5) 75%, rgba(30,30,30,1) 100%);
 }
 
 .main-text {
+  color: white;
   position: relative;
   margin: auto;
   text-align: center;
@@ -104,11 +112,17 @@ p {
   .about-text {
     width: 27%;
   }
+  .blog-post {
+    width: 30%;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
   .about-text {
     width: 80%;
+  }
+  .blog-post {
+    width: 400px;
   }
 }
 
@@ -119,6 +133,7 @@ p {
 }
 
 .about-text {
+  color: white;
   position: relative;
   margin-top: 0;
   margin-left: auto;
@@ -127,6 +142,7 @@ p {
 }
 
 .bottom-text {
+  color: white;
   position: relative;
   width: 90%;
   margin: auto;
@@ -135,7 +151,18 @@ p {
 }
 
 .bg-image-two {
+  color: white;
   background-image: url("../public/man-at-computer.jpg");
+  background-size: cover;
+  height: 500px;
+  animation-name: fadein;
+  animation-duration: 0.5s;
+  background-position: center;
+}
+
+.bg-image-three {
+  color: white;
+  background-image: url("../public/hoboken.jpeg");
   background-size: cover;
   height: 500px;
   animation-name: fadein;
@@ -149,4 +176,40 @@ p {
   width: 100%;
   background: rgb(0,0,0);
   background: radial-gradient(circle, rgba(225,75,75,0) 0%, rgba(225,75,75,0.5) 47%, rgba(225,75,75,1) 100%);
+}
+
+.bg-gradient-three {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background: rgb(0,0,0);
+  background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,0.5) 70%, rgba(30,30,30,1) 100%);
+}
+
+.product-choice {
+  margin: auto;
+  text-align: center;
+  position: relative;
+  background: rgb(225,75,75);
+  padding: 15px;
+  width: 500px;
+  border-radius: 20px;
+}
+
+.price-tag {
+  position: relative;
+  margin: auto;
+  text-align: center;
+  background: white;
+  color: black;
+  border-radius: 20px;
+}
+
+.blog-post {
+  position: relative;
+  margin: auto;
+  text-align: center;
+  background: white;
+  color: black;
+  border-radius: 20px;
 }
