--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,9 @@ li {
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 20px;
 }
+tt {
+  color: rgb(225,75,75);
+}
 
 ul {
   list-style-type: none;
@@ -211,6 +214,16 @@ ul {
   background-position: center;
 }
 
+.bg-image-four {
+  color: white;
+  background-image: url("../public/code.jpg");
+  background-size: cover;
+  height: 1000px;
+  animation-name: fadein;
+  animation-duration: 0.5s;
+  background-position: center;
+}
+
 .bg-gradient-two {
   position: relative;
   height: 100%;
@@ -225,6 +238,14 @@ ul {
   width: 100%;
   background: rgb(0,0,0);
   background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,0.5) 70%, rgba(30,30,30,1) 100%);
+}
+
+.bg-gradient-four {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background: rgb(30,30,30);
+  background: linear-gradient(0deg, rgba(30,30,30,1) 0%, rgba(6,6,6,1) 6%, rgba(0,0,0,0) 100%);
 }
 
 .product-choice {
@@ -251,5 +272,15 @@ ul {
   text-align: center;
   background: white;
   color: black;
+  border-radius: 20px;
+}
+
+.about-cards {
+  width: 90%;
+  position: relative;
+  top: 150px;
+  margin: auto;
+  background: rgb(50,50,50);
+  padding: 20px;
   border-radius: 20px;
 }
