--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,8 @@ body {
 }
 
 @font-face {
-  font-family: nilland-bold;
-  src: url("../public/Nilland-Bold.ttf")
+  font-family: kollenktif;
+  src: url("../public/Kollektif.ttf")
 }
 
 @keyframes fadein {
@@ -18,8 +18,10 @@ body {
 }
 
 h1 {
+  position: relative;
+  top: 3px;
   font-size: 50px;
-  font-family: nilland-bold, sans-serif;
+  font-family: kollenktif, sans-serif;
 }
 
 a {
@@ -27,12 +29,16 @@ a {
 }
 
 h2 {
+  position: relative;
+  top: 3px;
   font-size: 40px;
-  font-family: nilland-bold, sans-serif;
+  font-family: kollenktif, sans-serif;
 }
 
 h3 {
-  font-family: 'Helvetica Neue', sans-serif;
+  position: relative;
+  top: 3px;
+  font-family: kollenktif, sans-serif;
 }
 
 p {
@@ -278,7 +284,7 @@ ul {
   background: white;
   color: black;
   border-radius: 20px;
-  height: 475px;
+  display: table-cell;
 }
 
 .about-cards {
